# fun-ocaml.com

./: .gitignore  .spr.yml  LICENSE  Makefile  README.md  dune  dune-project  fun_ocaml.opam  fun_ocaml.opam.template  tailwind.config.js
asset/.well-known/: atproto-did
data/: data.ml  dune  features_vs_problems.yml  people.yml  sessions.yml
data/2024/: data2024.ml  dune  people.yml  sessions.yml
data/2024/schedule/: 16-09.yaml  17-09.yaml
data/2025/: data2025.ml  dune  people.yml  sessions.yml
data/2025/media/slides/: reinforcement-learning-workshop.html
data/2025/schedule/: 2025-09-15.yaml  2025-09-16.yaml
script/: deploy.sh
script/generate-attendee-tags/: .gitignore  index.js  package-lock.json  package.json  participant-data-extractor.html
src/: data.ml  dune  main.ml  template.eml  utils.ml
src/data/: data.ml  people.yml  read_yaml.ml
templates/: avatar.mlx  dune  home.mlx  layout.mlx  privacy.mlx  session.mlx  social_icons.mlx
templates/2024/: avatar.mlx  dune  home.mlx  layout.mlx  privacy.mlx  session.mlx  session.mlx.backup  social_icons.mlx
templates/2025/: avatar.mlx  dune  home.mlx  layout.mlx  privacy.mlx  session.mlx  social_icons.mlx
